Mise en page + Multi Effectif

--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -59,7 +59,7 @@
         <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.player' | translate }}</h5></div>
         <div>
             <form class="forms forms-inline input-field ">
-                <input type="text" class="input-big width-50" id="query" ng-model="query">
+                <input type="text" class="grey lighten-5 " id="query" ng-model="query">
                 <label for="query">Filter</label>
             </form>
         </div>
