--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -78,7 +78,7 @@
                         {{'headerMenu.notification' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-bar-chart left"></i>
                         {{'headerMenu.stats' | translate }}</a></li>
-                    <li><a href="#/private/effective" class="white-text light"><i class="mdi-social-people left"></i>
+                    <li><a href="#/private/effective/{{user.effectiveDefault}}" class="white-text light"><i class="mdi-social-people left"></i>
                         {{'headerMenu.effective' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="mdi-image-timer left"></i>
                         {{'headerMenu.training' | translate }}</a></li>
@@ -106,7 +106,7 @@
                     <li><a href="#/private/" class="light"><i class="fa fa-bar-chart left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.stats"></span></a>
                     </li>
-                    <li><a href="#/private/effective" class="light"><i class="mdi-social-people left"></i>
+                    <li><a href="#/private/effective/{{user.effectiveDefault}}" class="light"><i class="mdi-social-people left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.effective"></span></a>
                     </li>
                     <li><a href="#/private/" class="light"><i class="mdi-image-timer left"></i>
