Multi Effectifs OK

--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -55,9 +55,9 @@
                     </small>
                 </a>
 
-                <ul class="left hide-on-med-and-down red lighten-1 ">
-                    <li><a class="dropdown-button white-text light" href="#/private/" data-activates="dropdownSearch"><i
-                            class="mdi-action-search left"></i>{{'headerMenu.search' | translate }}</a></li>
+                <ul class="left hide-on-med-and-down red lighten-1">
+                    <li><a class="dropdown-button white-text light" href="#/private/" data-activates="dropdownSearch">
+                        <i class="mdi-action-search left"></i>{{'headerMenu.search' | translate }}</a></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
                     <li><a ng-click="logoff()" href="!#"><i class="white-text fa fa-power-off right"></i></a></li>
