--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -88,8 +88,7 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center">
-                            <a href="#/private/effective" class="btn red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>
-                            &nbsp;
+                            <a href="" class="btn red lighteen-1 white-text" ng-click="doTheBack()">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
                             <button class="btn white-text blue-grey darken-3" wz-next type="submit" name="next" ng-hide="playerCivilSection.$invalid">{{'commons.buttons.next' | translate }}</button>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
@@ -151,7 +150,7 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center-align">
-                            <a href="#/private/effective" class="btn red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
+                            <a href="" class="btn red lighteen-1 white-text" ng-click="doTheBack()">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
                             <button class="btn white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
                             <button class="btn white-text blue-grey darken-3" wz-next type="submit" name="next" ng-hide="playerCaracterSection.$invalid">{{'commons.buttons.next' | translate }}</button>
                         </div>
@@ -218,7 +217,7 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center-align">
-                            <a href="#/private/effective" class="btn red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
+                            <a href="" class="btn red lighteen-1 white-text" ng-click="doTheBack()">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
                             <button class="btn white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
                             <a wz-next class="btn white-text green darken-1">{{'commons.buttons.validate' | translate }}</a>
                         </div>
