--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -2,69 +2,71 @@
 <!-- body start-->
     <div class="row"> <div class="col s10"></div></div>   
 
-    <!-- action bar for tablet and phone -->
+    <!-- view for tablet and phone -->
     <div class="row hide-on-large-only">
         <div class="col s2">
-            <a href="#/private" class="btn-floating red lighten-1 tooltipped" 
-               data-position="bottom" data-delay="30" data-tooltip="{{'mainEffective.buttons.viewStatsEffective' | translate }}">
-                <i class="fa fa-bar-chart" ></i>
-            </a>
+            <a href="#/private" class="red-text text-lighten-1"><i class="material-icons">people</i></a>
         </div>
-        <div class="col s8">
-            <div class="light-green-text text-lighten-1 x-small">{{'mainEffective.title' | translate }} : {{currentEffective.label}} - {{currentEffective.categoryAge.label}} </div>
+        <div class="col s8 center-align">
+            <div><h5 class="light-green-text text-lighten-1" style="font-size:18px;">{{currentEffective.label}} - {{currentEffective.categoryAge.label}} </h5></div>
         </div>
         
         <div class="col s2">
-            <a class="dropdown-button red-text text-lighten-1" href="#!" data-activates="actionsEffective"><i class="material-icons right">more_vert</i></a>
-            
+            <a class="dropdown-button red-text text-lighten-1" href="#!" data-activates="actionsEffective"><i class="material-icons right">more_vert</i></a>            
             <!-- Dropdown Structure -->
             <ul id="actionsEffective" class="dropdown-content">
-                <li>
-                    <a href="#/private/addEffective/{{meta._id}}" class="red-text text-lighten-1 center tooltipped" 
-                        data-position="right" data-delay="20" data-tooltip="{{'mainEffective.buttons.addEffective' | translate }}">
-                            <i class="material-icons center">playlist_add</i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#/private/updateEffective/{{currentEffective._id}}" class="red-text text-lighten-1 center tooltipped" 
-                        data-position="right" data-delay="20" data-tooltip="{{'mainEffective.buttons.updateEffective' | translate }}">
-                            <i class="material-icons center">mode_edit</i>
-                    </a>
-                </li>
+                <li><a href="#/private/addEffective/{{meta._id}}" class="red-text text-lighten-1 center"><i class="material-icons center">group_add</i></a></li>
+                <li><a href="#/private/updateEffective/{{currentEffective._id}}" class="red-text text-lighten-1 center"><i class="material-icons center">mode_edit</i></a></li>
                 <li class="divider"></li>
-                <li>
-                    <a href="#/private/addPlayer/{{meta._id}}" class="red-text text-lighten-1 center tooltipped" 
-                       data-position="right" data-delay="20" data-tooltip="{{'mainEffective.buttons.addPlayer' | translate }}">
-                            <i class="material-icons center">person_add</i>
-                    </a>
-                </li>
-            </ul>
-        
+                <li><a href="#/private/addPlayer/{{meta._id}}" class="red-text text-lighten-1 center"><i class="material-icons center">person_add</i></a></li>
+            </ul>        
         </div>
-    </div>
-    <div class="row hide-on-large-only">
+    
         <!-- effective list -->
         <ul id="effectiveListSmall" class="dropdown-content">
             <li ng-repeat="effective in effectives">
-                <a href="#/private/effective/{{effective._id}}"><h6 class="red-text text-lighten-1">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
+                <a href="#/private/effective/{{effective._id}}"><span class="blue-grey-text text-darken-2" style="font-size:12px;">{{effective.label}} - {{effective.categoryAge.label}}</span></a>
+                <div class="divider"></div>
             </li>
         </ul>
-        <div class="col s12">
+        <div class="col s12 center-align">
             <p ng-show="effectives.length > 1">
-            <a class="dropdown-button waves-effect waves-light withe-text red ligthen-1 btn" style="font-size: x-small;" href="#!" data-activates="effectiveListSmall">
-                {{'mainEffective.buttons.dropdownEffective' | translate }} &nbsp;&nbsp;&nbsp;&nbsp;
-                <i class="material-icons right">arrow_drop_down</i>
+            <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: xx-small;" href="#!" data-activates="effectiveListSmall">
+                {{'mainEffective.buttons.dropdownEffective' | translate }} <i class="material-icons right">arrow_drop_down</i>
             </a>
             </p>
             <p ng-show="effectives.length < 2">&nbsp;</p>
         </div>
+        
+         <!-- filter -->
+        <div class="col s12">
+            <form class="forms forms-inline input-field">
+                <input type="text" id="query" class="grey lighten-4" ng-model="query">
+                <label for="query">Filter</label>
+            </form>
+        </div>   
+        <div class="col s12">    
+            <ul class="collection">
+                <li class="collection-item avatar col s12" ng-repeat="player in players | filter:query">
+                    <simple-avatar person="player" link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
+                    <a href="#/private/viewPlayer/{{player._id}}" class="title red-text text-lighten-1" style="font-size:15px;">{{player.firstname}} {{player.name}}</a>
+                    <a href="#/private/statPlayer/{{player._id}}" class="waves-effect waves-light white red-text text-lighten-1 right"><i class="material-icons small">insert_chart</i></a>
+                    <p style="font-size:10px;">
+                        {{player.age}} {{'commons.format.ageYear' | translate }} - 
+                        {{player.status.height}} {{'commons.format.height' | translate }} / {{player.status.weight}} {{'commons.format.weight' | translate }}
+                    </p>
+                </li>
+            </ul>
+        </div>
     </div>
-    <!-- action bar for desktop -->
+    
+    
+    <!-- view for desktop -->
     <div class="row hide-on-med-and-down">
         <div class="col s1">
-            <a href="#/private" class="btn-floating red lighten-1 tooltipped" 
-               data-position="bottom" data-delay="30" data-tooltip="{{'mainEffective.buttons.viewStatsEffective' | translate }}">
-                <i class="fa fa-bar-chart" ></i>
+            <a href="#/private" class="red-text text-lighten-1 center tooltipped" 
+               data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.viewStatsEffective' | translate }}">
+                <i class="material-icons medium">people</i>
             </a>
         </div>
         <div class="col s5">
@@ -74,13 +76,14 @@
         <!-- effective list -->
         <ul id="effectiveList" class="dropdown-content">
             <li ng-repeat="effective in effectives">
-                <a href="#/private/effective/{{effective._id}}"><h6 class="red-text text-lighten-1">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
+                <a href="#/private/effective/{{effective._id}}"><h6 class="blue-grey-text text-darken-2">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
+                <div class="divider"></div>
             </li>
         </ul>
         
         <div class="col s3">
             <p ng-show="effectives.length > 1">
-            <a class="dropdown-button waves-effect waves-light withe-text red ligthen-1 btn" style="font-size: x-small;" href="#!" data-activates="effectiveList">
+            <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="effectiveList">
                 {{'mainEffective.buttons.dropdownEffective' | translate }} &nbsp;&nbsp;&nbsp;&nbsp;
                 <i class="material-icons right">arrow_drop_down</i>
             </a>
@@ -91,7 +94,7 @@
         <div class="col s1 right-align">    
             <a href="#/private/addEffective/{{meta._id}}" class="red-text text-lighten-1 center tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.addEffective' | translate }}">
-                    <i class="material-icons small">playlist_add</i>
+                    <i class="material-icons small">group_add</i>
             </a>
         </div>
         <div class="col s1 right-align">
@@ -106,14 +109,11 @@
                     <i class="material-icons small">person_add</i>
             </a>
         </div>
-    </div>
     
-    <!-- player list-->
-    <div class="row">
         <!-- filter -->
         <div class="col s12">
             <form class="forms forms-inline input-field">
-                <input type="text" id="query" class="grey lighten-5" ng-model="query">
+                <input type="text" id="query" class="grey lighten-4" ng-model="query">
                 <label for="query">Filter</label>
             </form>
         </div>   
@@ -121,7 +121,7 @@
             <ul class="collection">
                 <li class="collection-item avatar col s12" ng-repeat="player in players | filter:query">
                     <simple-avatar person="player" link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
-                    <a href="#/private/viewPlayer/{{player._id}}" class="modal-trigger title red-text text-lighten-1">{{player.firstname}} {{player.name}}</a> 
+                    <a href="#/private/viewPlayer/{{player._id}}" class="title red-text text-lighten-1">{{player.firstname}} {{player.name}}</a> 
                     <span class="title  hide-on-small-only">{{player.positionType}}</span>
                     <p>
                         {{player.age}} {{'commons.format.ageYear' | translate }} - 
