Gestion Adresse et dates au format long

--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -17,7 +17,7 @@
     </div>
     
     <div class="row">
-        <wizard on-finish="writePerson()" template="app/components/directives/wizard/wizard.html"> 
+        <wizard on-finish="checkAndformatPerson()" template="app/components/directives/wizard/wizard.html"> 
             
             <!-- step etat civil -->
             <wz-step title="{{'playerLabels.playerCivilSection' | translate }}" template="app/components/directives/wizard/step.html">
