--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -1,78 +1,96 @@
 <div class="container">
 
-<!-- space between header menu and body-->
-<div class="row s12"></div>
+    <!-- space between header menu and body-->
+    <div class="row s12"></div>
 
-<!-- body start-->
-<div class="row">
-    <div class="col s12 m6 l8">
-        
-        <!-- Event -->
-        <next-event ></next-event>
-        <br/>
-        
-        <!-- Collecte-->
-        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.stats' | translate }}</h5></div>
-        <div>
-            <div class="card small">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/images/ACT-HAND-STAT.jpg">
-                    <span class="card-title white-text flow-text">CRMHB Rennes - USDK Dunkerque, le 15/04/2015</span>
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator blue-grey-text text-darken-1">Défaite 21 - 20 <i class="mdi-navigation-more-vert right"></i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title blue-grey-text text-darken-1">Card Title <i class="mdi-navigation-close right"></i></span>
-                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                </div>
-                <div class="card-action blue-grey darken-1">
-                    <a href='#' class="hide-on-med-and-down left waves-effect waves-light white-text"><i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a>
-                    <a href='#' class="right white-text"><i class="mdi-navigation-chevron-right right"></i>Suivant</a>
-                    <a href="#" class="right white-text"><i class="mdi-navigation-chevron-left left"></i>Précédent</a>
+    <!-- body start-->
+    <div class="row">
+        <div class="col s12 m6 l8">
+
+            <!-- Event -->
+            <next-event></next-event>
+            <br/>
+
+            <!-- Collecte-->
+            <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.stats'
+                | translate }}</h5></div>
+            <div>
+                <div class="card small">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/ACT-HAND-STAT.jpg">
+                        <span class="card-title white-text flow-text">CRMHB Rennes - USDK Dunkerque, le 15/04/2015</span>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator blue-grey-text text-darken-1">Défaite 21 - 20 <i
+                                class="mdi-navigation-more-vert right"></i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title blue-grey-text text-darken-1">Card Title <i
+                                class="mdi-navigation-close right"></i></span>
+
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                    <div class="card-action blue-grey darken-1">
+                        <a href='#' class="hide-on-med-and-down left waves-effect waves-light white-text"><i
+                                class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a>
+                        <a href='#' class="right white-text"><i
+                                class="mdi-navigation-chevron-right right"></i>Suivant</a>
+                        <a href="#" class="right white-text"><i
+                                class="mdi-navigation-chevron-left left"></i>Précédent</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- player list-->
-    <div class="col s12 m6 l4">
-        <!-- TOP 3 -->
-        <div><h5 class="header red-text text-lighten-1"><i class="mdi-action-stars"></i> {{'dashboard.topplayer' | translate }}</h5></div>
-        <ul class="collapsible popout" data-collapsible="accordion">
-            <li>
-              <div class="collapsible-header tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}"><i class="fa fa-futbol-o"></i> {{user.firstname}} {{user.name}}</div>
-              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-            <li>
-              <div class="collapsible-header"><i class="mdi-image-timer"></i> {{user.firstname}} {{user.name}}</div>
-              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-            <li>
-              <div class="collapsible-header"><i class="mdi-social-whatshot"></i> {{user.firstname}} {{user.name}}</div>
-              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-        </ul>
-        <br/>
-        
-        <!-- List Player -->
-        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.player' | translate }}</h5></div>
-        <div>
-            <form class="forms forms-inline input-field ">
-                <input type="text" class="grey lighten-4" id="query" ng-model="query">
-                <label for="query">Filter</label>
-            </form>
+        <!-- player list-->
+        <div class="col s12 m6 l4">
+            <!-- TOP 3 -->
+            <div><h5 class="header red-text text-lighten-1"><i class="mdi-action-stars"></i> {{'dashboard.topplayer' |
+                translate }}</h5></div>
+            <ul class="collapsible popout" data-collapsible="accordion">
+                <li>
+                    <div class="collapsible-header tooltipped" data-position="right" data-delay="30"
+                         data-tooltip="{{'headerMenu.search-player' | translate }}"><i class="fa fa-futbol-o"></i>
+                        {{user.firstname}} {{user.name}}
+                    </div>
+                    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="mdi-image-timer"></i> {{user.firstname}} {{user.name}}
+                    </div>
+                    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="mdi-social-whatshot"></i> {{user.firstname}} {{user.name}}
+                    </div>
+                    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                </li>
+            </ul>
+            <br/>
+
+            <!-- List Player -->
+            <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.player'
+                | translate }}</h5></div>
+            <div>
+                <form class="forms forms-inline input-field ">
+                    <input type="text" class="grey lighten-4" id="query" ng-model="query">
+                    <label for="query">Filter</label>
+                </form>
+            </div>
+            <ul class="collection">
+                <li class="collection-item avatar" ng-repeat="player in effective | filter:query">
+                    <simple-avatar width="'30px'" person="player"
+                                   link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
+                    <span class="title red-text text-lighten-1">{{player.firstname}} {{player.name}}</span>
+
+                    <p>{{player.positionType}}</p>
+                    <a href="#/private/statPlayer/{{player._id}}"
+                       class="secondary-content btn-floating waves-effect waves-light red lighten-1"><i
+                            class="fa fa-bar-chart"></i></a>
+                </li>
+            </ul>
+
         </div>
-        <ul class="collection">
-            <li class="collection-item avatar" ng-repeat="player in effective | filter:query">
-                <simple-avatar width="'30px'" person="player" link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
-                <span class="title red-text text-lighten-1">{{player.firstname}} {{player.name}}</span>
-                <p>{{player.positionType}}</p>
-                <a href="#/private/statPlayer/{{player._id}}" class="secondary-content btn-floating waves-effect waves-light red lighten-1"><i class="fa fa-bar-chart"></i></a>
-            </li>
-        </ul>
-    
     </div>
-</div>
-<!-- body end-->
+    <!-- body end-->
 </div>
