--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -10,50 +10,88 @@
     
     <!-- view for desktop -->
     <div class="row hide-on-med-and-down">
-        <div class="col s12">    
-            <ul>
+        <div class="col s1 red-text text-lighten-1 center"><i class="fa fa-calendar small left"></i></div>
+        <div class="col s5">
+            <div><h5 class="light-green-text text-lighten-1">{{'mainAgenda.title' | translate }}</h5></div>
+        </div>
+        
+        <!-- effective list -->
+        <ul id="effectiveList" class="dropdown-content">
+            <li ng-repeat="effective in effectives">
+                <a href="#/private/effective/{{effective._id}}"><h6 class="blue-grey-text text-darken-2">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
+                <div class="divider"></div>
+            </li>
+        </ul>
+        
+        <div class="col s3">
+            <p ng-show="effectives.length > 1">
+            <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="effectiveList">
+                {{'mainAgenda.buttons.dropdownEffective' | translate }} &nbsp;&nbsp;&nbsp;&nbsp;
+                <i class="material-icons right">arrow_drop_down</i>
+            </a>
+            </p>
+            <p ng-show="effectives.length < 2">&nbsp;</p>
+        </div>
+        
+        <div class="col s3 right-align">    
+            <a href="#/private/addEvent/{{meta._id}}" class="red-text text-lighten-1 center tooltipped" 
+                data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.addEvent' | translate }}">
+                    <i class="fa fa-calendar-plus-o"></i>
+            </a>
+        </div>
+        
+        <!-- filter -->
+        <div class="col s12">
+            <form class="forms forms-inline input-field">
+                <input type="text" id="query" class="grey lighten-4" ng-model="query">
+                <label for="query">Filter</label>
+            </form>
+        </div>   
+        <div class="col s8">    
+            <ul class="collection">
                 <li class="blue-grey-text text-darken-2 col s12">
-                    <div class="blue-grey-text text-darken-2"><h3>Septembre 2015</h3></div>
+                    <div class="blue-grey-text text-darken-2"><h5>Septembre 2015</h5></div>
                 </li>
-                <li class="col s12 m6" ng-repeat="event in events">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="card-title blue-grey-text text-darken-2 flow-text">{{event.participants.teamHome}} - {{event.participants.teamVisitor}}</span>
-                            <span class="blue-grey-text text-darken-2 flow-text activator">{{event.startDate |  date : 'dd/MM/yyyy HH:mm'}} <i class="mdi-navigation-more-vert right"></i></span>
+                <li class="col s12" ng-repeat="currentEvent in events | filter:query">
+                    <div class="card white">
+                        <!-- cup -->
+                        <div class="card-content blue-grey darken-1 white-text flow-text" ng-show="currentEvent.link.type=='cup'">
+                            <span class="card-title">
+                                <i class="material-icons small">album</i> {{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</span>
+                            <hr class="white" />
+                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
+                            <h6>{{currentEvent.address.formatedAddress}}</h6>
+                            <div map-lazy-load="https://maps.google.com/maps/api/js" ng-if="mapShow">
+                                <map center="{{currentEvent.address.lat}}, {{currentEvent.address.lng}}" zoom="16"></map>
+                            </div>
                         </div>
-                        <div class="card-reveal">
-                            <span class="card-title blue-grey-text text-darken-1">Card Title <i class="mdi-navigation-close right"></i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        <!-- friendlyGame -->
+                        <div class="card-content green darken-2 white-text flow-text" ng-show="currentEvent.link.type=='friendlyGame'">
+                            <span class="card-title">
+                                <i  class="material-icons small">flare</i> {{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</span>
+                            <hr class="white" />
+                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
+                            <h6>{{currentEvent.address.formatedAddress}}</h6>
+                            <div map-lazy-load="https://maps.google.com/maps/api/js" ng-if="mapShow">
+                                <map center="{{currentEvent.address.lat}}, {{currentEvent.address.lng}}" zoom="16"></map>
+                            </div>
                         </div>
-                        <div class="card-action blue-grey darken-1">
-                            <span class="card-title white-text flow-text">{{event.label}}</span>
-                            <a href='#' class="right white-text"><i class="mdi-navigation-chevron-right right"></i>Suivant</a>
-                            <a href="#" class="right white-text"><i class="mdi-navigation-chevron-left left"></i>Précédent</a>
+                        <!-- championship -->
+                        <div class="card-content  light-blue darken-3 white-text flow-text" ng-show="currentEvent.link.type=='championship'">
+                            <span class="card-title">
+                                <i class="material-icons small">stars</i> {{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</span>
+                            <hr class="white" />
+                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
+                            <h6>{{currentEvent.address.formatedAddress}}</h6>
+                            <div map-lazy-load="https://maps.google.com/maps/api/js" ng-if="mapShow">
+                                <map center="{{currentEvent.address.lat}}, {{currentEvent.address.lng}}" zoom="16"></map>
+                            </div>
                         </div>
-                    </div>
-                </li>
-                
-                <li class="collection blue-grey-text text-darken-2 col s12">
-                    <div class="red-text -text-lighteen-1"><h3>&nbsp;</h3></div>
-                </li>
-                
-                <li class="collection blue-grey-text text-darken-2 col s12">
-                    <div class="amber lighten-2 blue-grey-text text-darken-2"><h3>Octobre 2015</h3></div>
-                </li>
-                <li class="collection col s12 m6" ng-repeat="event in events">
-                    <div class="card small">
-                        <div class="card-content">
-                            <span class="card-title blue-grey-text flow-text">{{event.participants.teamHome}} - {{event.participants.teamVisitor}}</span>
-                            <span class="card-title activator blue-grey-text flow-text">{{event.startDate |  date : 'dd/MM/yyyy HH:mm'}} <i class="mdi-navigation-more-vert right"></i></span>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title blue-grey-text text-darken-1">Card Title <i class="mdi-navigation-close right"></i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                        </div>
-                        <div class="card-action blue-grey darken-1">
-                            <span class="card-title white-text flow-text">{{event.label}}</span>
-                            <a href='#' class="right white-text"><i class="mdi-navigation-chevron-right right"></i>Suivant</a>
-                            <a href="#" class="right white-text"><i class="mdi-navigation-chevron-left left"></i>Précédent</a>
+                        <div class="card-action white">
+                            <a href="#/private/updateEvent/{{currentEvent._id}}" class="red-text text-lighten-1 center tooltipped" 
+                                data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.updateEvent' | translate }}">
+                                <i class="material-icons">mode_edit</i>
+                            </a>
                         </div>
                     </div>
                 </li>
