--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -86,7 +86,7 @@
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-trophy left"></i>
                         {{'headerMenu.championship' | translate }}</a></li>
                     -->
-                    <li><a href="#/private/agenda/{{meta.sandbox._id}}" class="white-text light"><i class="fa fa-calendar left"></i>
+                    <li><a href="#/private/agenda/{{user.effectiveDefault}}" class="white-text light"><i class="fa fa-calendar left"></i>
                         {{'headerMenu.calendar' | translate }}</a></li>
                     <li class="divider"></li>
                     <li><a ng-click="logoff()" class="white-text light"><i class="fa fa-power-off left"></i>
@@ -119,7 +119,7 @@
                         <span class="hide-on-med-and-down" translate="headerMenu.championship"></span></a>
                     </li>
                     -->
-                    <li><a href="#/private/agenda/{{meta.sandbox._id}}" class="light"><i class="fa fa-calendar left"></i>
+                    <li><a href="#/private/agenda/{{user.effectiveDefault}}" class="light"><i class="fa fa-calendar left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.calendar"></span></a>
                     </li>
                 </ul>
