--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -11,14 +11,24 @@
     <!-- view for desktop -->
     <div class="row hide-on-med-and-down">
         <div class="col s1 red-text text-lighten-1 center"><i class="fa fa-calendar small left"></i></div>
-        <div class="col s5">
+        <div class="col s3">
             <div><h5 class="light-green-text text-lighten-1">{{'mainAgenda.title' | translate }}</h5></div>
+        </div>
+        
+        <div class="col s1 center">
+            <div><a ng-click="getCalendarMonths()" class="btn white-text red lighten-1">Mois</a></div>
+        </div>
+        <div class="col s2 center">
+            <div><a ng-click="getCalendarQuarters()" class="btn white-text red lighten-1">Trimestre</a></div>
+        </div>
+        <div class="col s1 center">
+            <div><a ng-click="getCalendarSeason()" class="btn white-text red lighten-1">Saison</a></div>
         </div>
         
         <!-- effective list -->
         <ul id="effectiveList" class="dropdown-content">
             <li ng-repeat="effective in effectives">
-                <a href="#/private/effective/{{effective._id}}"><h6 class="blue-grey-text text-darken-2">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
+                <a href="#/private/agenda/{{effective._id}}"><h6 class="blue-grey-text text-darken-2">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
                 <div class="divider"></div>
             </li>
         </ul>
@@ -33,10 +43,10 @@
             <p ng-show="effectives.length < 2">&nbsp;</p>
         </div>
         
-        <div class="col s3 right-align">    
+        <div class="col s1 right-align">    
             <a href="#/private/addEvent/{{meta._id}}" class="red-text text-lighten-1 center tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.addEvent' | translate }}">
-                    <i class="fa fa-calendar-plus-o"></i>
+                    <i class="material-icons small">add</i>
             </a>
         </div>
         
@@ -46,11 +56,16 @@
                 <input type="text" id="query" class="grey lighten-4" ng-model="query">
                 <label for="query">Filter</label>
             </form>
-        </div>   
-        <div class="col s8">    
+        </div>
+        <!-- filter -->
+        <div class="col s1 center small" ng-repeat="month in months" ng-show="periodicity === 'month'">
+            <a ng-click="getEventMonth(month.index)" class="waves-effect waves-light btn blue-grey darken-2 white-text" ng-hide="month.active">{{month.label}}</a>
+            <a ng-click="getEventMonth(month.index)" class="waves-effect waves-light btn red lighten-2 white-text" ng-show="month.active">{{month.label}}</a>
+        </div>
+        <div class="col s12">    
             <ul class="collection">
                 <li class="blue-grey-text text-darken-2 col s12">
-                    <div class="blue-grey-text text-darken-2"><h5>Septembre 2015</h5></div>
+                    <div class="blue-grey-text text-darken-2"><h5>{{periodicityActive.label}}</h5></div>
                 </li>
                 <li class="col s12" ng-repeat="currentEvent in events | filter:query">
                     <div class="card white">
@@ -59,34 +74,23 @@
                             <span class="card-title">
                                 <i class="material-icons small">album</i> {{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</span>
                             <hr class="white" />
-                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
-                            <h6>{{currentEvent.address.formatedAddress}}</h6>
-                            <div map-lazy-load="https://maps.google.com/maps/api/js" ng-if="mapShow">
-                                <map center="{{currentEvent.address.lat}}, {{currentEvent.address.lng}}" zoom="16"></map>
-                            </div>
+                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate}}</h5>
                         </div>
                         <!-- friendlyGame -->
                         <div class="card-content green darken-2 white-text flow-text" ng-show="currentEvent.link.type=='friendlyGame'">
                             <span class="card-title">
                                 <i  class="material-icons small">flare</i> {{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</span>
                             <hr class="white" />
-                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
-                            <h6>{{currentEvent.address.formatedAddress}}</h6>
-                            <div map-lazy-load="https://maps.google.com/maps/api/js" ng-if="mapShow">
-                                <map center="{{currentEvent.address.lat}}, {{currentEvent.address.lng}}" zoom="16"></map>
-                            </div>
+                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate}}</h5>
                         </div>
                         <!-- championship -->
                         <div class="card-content  light-blue darken-3 white-text flow-text" ng-show="currentEvent.link.type=='championship'">
                             <span class="card-title">
                                 <i class="material-icons small">stars</i> {{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</span>
                             <hr class="white" />
-                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
-                            <h6>{{currentEvent.address.formatedAddress}}</h6>
-                            <div map-lazy-load="https://maps.google.com/maps/api/js" ng-if="mapShow">
-                                <map center="{{currentEvent.address.lat}}, {{currentEvent.address.lng}}" zoom="16"></map>
-                            </div>
+                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate}}</h5>
                         </div>
+                        
                         <div class="card-action white">
                             <a href="#/private/updateEvent/{{currentEvent._id}}" class="red-text text-lighten-1 center tooltipped" 
                                 data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.updateEvent' | translate }}">
